Fix newsletter section margin
Changed proportions of newsletter section to match
the whitespace on the top and bottom of the
button container

--- a/styles.css
+++ b/styles.css
@@ -180,7 +180,7 @@ body > *{
 }
 
 .button-container{
-    height: 300px;
+    height: 260px;
 }
 
 .container{
